src/test/ui/rfc-2627-raw-dylib/feature-gate-raw-dylib.stderr
error[E0658]: kind="raw-dylib" is unstable
  --> $DIR/feature-gate-raw-dylib.rs:1:1
   |
LL | #[link(name="foo", kind="raw-dylib")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/58713
   = help: add `#![feature(raw_dylib)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
