src/test/ui/rfc-2627-raw-dylib/feature-gate-raw-dylib.rs
#[link(name="foo", kind="raw-dylib")]
//~^ ERROR: kind="raw-dylib" is unstable
extern {}

fn main() {}
